[project]
name = "jam"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiberiu Lepadatu",email = "tiberiulepadatu14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foxdot (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

