[tool.poetry]
name = "jam"
version = "0.1.0"
description = ""
authors = ["Tiberiu Lepadatu <tiberiulepadatu14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
foxdot = "^0.9.0"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"